fix sent message getting clipped

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1162,12 +1162,10 @@
 
 @keyframes llamaActiveExchangeEnter {
 	from {
-		opacity: 0.2;
-		transform: translateY(44px);
+		opacity: 0;
 	}
 	to {
 		opacity: 1;
-		transform: translateY(0);
 	}
 }
 
